# pk_editor

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.claude/: CLAUDE.md
.claude/commands/: semver copy.md  semver.md
.github/workflows/: build.yml  github-actions.yml  release.yml
assets/Font/: pokemon_db.csv
fonts/: icons.toml
src/: error.rs  icon.rs  lib.rs  main.rs  message.rs  misc.rs  screen.rs  theme.rs  ui.rs  widgets.rs
src/screen/: bag.rs  party_box.rs
src/ui/: party.rs  pc.rs  pokemon_info.rs  slots.rs  widgets.rs
src/widgets/: gender.rs  level.rs  menu_bar.rs  mod.rs  party.rs  party_slot.rs  pc.rs  pc_slot.rs  pokemon_info.rs  slot.rs  stat_bar.rs  tab.rs
