[package]
name = "pk_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "advanced", "image", "svg"] }
tokio = { version = "1.37.0", features = ["fs"] }
rfd = "0.14.1"
thiserror = "2.0.9"
include_dir = "0.7.3"
pk_edit = { git = "https://github.com/CMIW/pk_edit.git"}
#pk_edit = { path = "../pk_edit"}

[build-dependencies]
iced_fontello = "0.13"
